syntax = "proto3";

package product_service.pkg.pb;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";

option go_package = "product-service/productpb";

message Product {
  uint64 id = 1;
  string name = 2 [(buf.validate.field).string.min_len = 1];
  double price = 3 [(buf.validate.field).double = {gte: 0.0}];
  uint64 seller_id = 4;
  int64 inventory = 5 [(buf.validate.field).int64 = {gte: 0}];
  google.protobuf.Struct attributes = 6;
}

// CreateProduct
message CreateProductRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  double price = 2 [(buf.validate.field).double = {gte: 0.0}];
  uint64 seller_id = 3;
  int64 inventory = 4 [(buf.validate.field).int64 = {gte: 0}];
  google.protobuf.Struct attributes = 5;
}
message CreateProductResponse {
  string message = 1;
  bool success = 2;
}

// UpdateProduct
message UpdateProductRequest {
  Product Product = 1;
  uint64 user_id = 2;
}
message UpdateProductResponse {
  string message = 1;
  bool success = 2;
}

// GetProductByID
message GetProductByIDRequest {
  uint64 id = 2;
}
message GetProductByIDResponse {
  string message = 1;
  bool success = 2;
  Product product = 3;
}

// GetProductsByID
message GetProductsByIDRequest {
  repeated uint64 id = 2;
}
message GetProductsByIDResponse {
  string message = 1;
  bool success = 2;
  repeated Product product = 3;
}

// GetProductsBySellerID
message GetProductsBySellerIDRequest {
  uint64 seller_id = 1;
}
message GetProductsBySellerIDResponse {
  string message = 1;
  bool success = 2;
  repeated Product products = 3;
}

// GetInventoryByID
message GetInventoryByIDRequest {
  uint64 id = 1;
}
message GetInventoryByIDResponse {
  string message = 1;
  bool success = 2;
  int64 inventory = 3;
}

// GetAndDecreaseInventoryByID
message GetAndDecreaseInventoryByIDRequest {
  uint64 id = 1;
  int64 quantity = 2 [(buf.validate.field).int64 = {gte: 0}];
  uint64 user_id = 3;
}
message GetAndDecreaseInventoryByIDResponse {
  string message = 1;
  bool success = 2;
}

// GetListProducts
message GetProductsRequest {
  uint64 page = 1;
  uint64 page_size = 2;
}
message GetProductsResponse {
  string message = 1;
  bool success = 2;
  repeated Product product = 3;
}

// Service
service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse);
  rpc GetProductsByID(GetProductsByIDRequest) returns (GetProductsByIDResponse);
  rpc GetProductsBySellerID(GetProductsBySellerIDRequest) returns (GetProductsBySellerIDResponse);
  rpc GetInventoryByID(GetInventoryByIDRequest) returns (GetInventoryByIDResponse);
  rpc GetAndDecreaseInventoryByID(GetAndDecreaseInventoryByIDRequest) returns (GetAndDecreaseInventoryByIDResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}
