package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"

	"google.golang.org/protobuf/types/known/structpb"
	"gorm.io/datatypes"

	"product-service/internal/server"
	productpb "product-service/pkg/pb"
)

func convertJSONToStruct(data datatypes.JSON) *structpb.Struct {
	var m map[string]interface{}
	if err := json.Unmarshal(data, &m); err != nil {
		log.Printf("‚ö†Ô∏è L·ªói parse JSON: %v", err)
		return nil
	}
	s, err := structpb.NewStruct(m)
	if err != nil {
		log.Printf("‚ö†Ô∏è L·ªói t·∫°o structpb.Struct: %v", err)
		return nil
	}
	return s
}

func SeedProducts(productServer *server.ProductServer) {
	ctx := context.Background()

	products := []struct {
		Name       string
		Price      float64
		SellerID   uint64
		Inventory  int
		Attributes datatypes.JSON
	}{
		{
			Name:       "iPhone 15 Pro",
			Price:      1200.00,
			SellerID:   2,
			Inventory:  50,
			Attributes: datatypes.JSON([]byte(`{"color": "black", "storage": "256GB"}`)),
		},
		{
			Name:       "MacBook Air M3",
			Price:      1500.00,
			SellerID:   2,
			Inventory:  30,
			Attributes: datatypes.JSON([]byte(`{"color": "silver", "ram": "16GB"}`)),
		},
	}

	fmt.Println("üå± B·∫Øt ƒë·∫ßu seed s·∫£n ph·∫©m m·∫∑c ƒë·ªãnh...")

	for _, p := range products {
		req := &productpb.CreateProductRequest{
			Name:       p.Name,
			Price:      p.Price,
			SellerId:   p.SellerID,
			Inventory:  int64(p.Inventory),
			Attributes: convertJSONToStruct(p.Attributes),
		}

		resp, err := productServer.CreateProduct(ctx, req)
		if err != nil {
			fmt.Printf("‚ùå Seed %s th·∫•t b·∫°i: %v\n", p.Name, err)
			continue
		}
		fmt.Printf("‚úÖ Seed %s: %s\n", p.Name, resp.Message)
	}

	fmt.Println("üå± Ho√†n t·∫•t seed s·∫£n ph·∫©m!")
}
